--- a/index.html
+++ b/index.html
@@ -1,81 +1,55 @@
-<!<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>animal Giftastic</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/styles.css" /> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-
-    <style type="text/css">
-        button,
-        div,
-        form,
-        input {
-            margin: 10px;
-        }
-
-        #gifs-1 {
-            float: left;
-            overflow: hidden;
-        }
-        #gifs-1 {
-            float: right;
-            overflow: hidden;
-        }
-        h1 {
-            color: royalblue;
-            font-size: 5em;
-        }
-        body {
-            background-color: lightgoldenrodyellow;
-        }
-    </style>
-
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/animate.css"> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <title>Giphy API</title>
 </head>
 
 <body>
-    <div id="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col">
-                <h1>Giftastic!</h1>
+            <div class="col-sm-4 text-center">
+                <!-- <span class="animated slidInDown text-center"> -->
+                <span>
+                    <h1>gifTastic!</h1>
+                </span>
+                <p>
+                    <h3>Gifs of Animals!</h3>
+                </p>
+            </div>
+            <div class="col-sm-8 header">
+                <form id="form">
+                    <label for="user-input">Add an Animal!</label>
+                    <input class="user-input" type="text">
+                    <input class="submit btn-primary rounded" type="submit" value="Submit">
+                </form>
+
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <div id="animals-view"></div>
-            </div> <!-- end of col -->
-
-            <div class="col">
-                <div id="form">
-                    <form id="animal-form">
-                        <label for="animal-input">Add an animal</label>
-                        <input type="text" id="animal-input"><br>
-
-                        <!-- Button triggers new Aaniml to be added -->
-                        <input id="add-animal" type="submit" value="Add an animal">
-                    </form>
-                    <!--end of form-->
-                </div>
+            <div class="col-sm-4 buttons">
+                BUTTONS WILL APPEAR HERE!
+            </div>
+            <div class="col-sm-8 info">
+                GIFS WILL APPEAR HERE!
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div id="gifs-1"></div>
-            </div>
-            <div class="col-md-6">
-                <div id="gifs-2"></div>
-            </div>
-        </div>
+    </div>
 
-        <script type="text/javascript" src="assets/js/app.js"></script>
+
 
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    
+    <script src="./assets/javascript/app.js"></script>
 
 </body>
 
